--- a/css.css
+++ b/css.css
@@ -95,6 +95,8 @@ section p {
 cite {
 	text-align: center;
 	font-family: "corporate";
+	font-weight: 400;
+	color: hsl(31, 100%, 41%);
 }
 section:nth-of-type(3),
 section:nth-of-type(4) {
@@ -159,7 +161,9 @@ h2 {
 	transition: 1s all ease;
 	padding-bottom: 0em;
 }
-
+.invisible{
+	display: none;
+}
 h2:nth-of-type(1) {
 	color: hsl(31, 100%, 41%);
 	text-align: center;
