--- a/css.css
+++ b/css.css
@@ -98,6 +98,7 @@ cite {
 	font-weight: 400;
 	color: hsl(31, 100%, 41%);
 }
+
 section:nth-of-type(3),
 section:nth-of-type(4) {
 	background-color: white;
@@ -107,12 +108,14 @@ section:nth-of-type(3) p,
 section:nth-of-type(4) p {
 	color: hsl(31, 100%, 41%);
 }
+
 .flaneerbrigade:first-of-type,
 .content {
 	background-color: hsl(31, 100%, 41%);
 }
-section:last-of-type{
-	padding-bottom:4em ;
+
+section:last-of-type {
+	padding-bottom: 4em;
 }
 
 /* vaste waarden h1 h2  */
@@ -161,9 +164,11 @@ h2 {
 	transition: 1s all ease;
 	padding-bottom: 0em;
 }
-.invisible{
+
+.invisible {
 	display: none;
 }
+
 h2:nth-of-type(1) {
 	color: hsl(31, 100%, 41%);
 	text-align: center;
@@ -369,23 +374,37 @@ span {
 button {
 	background-color: white;
 	color: hsl(31, 100%, 41%);
-	border-color: none;
-	border-radius: 5%;
+	border-color: hsl(31, 100%, 41%);
+	margin-top: 1em;
+	padding: 2em;
+	font-family: "corporate";
+
 
 }
 
 button:hover {
 	color: white;
 	background-color: hsl(31, 100%, 41%);
+	font-family: "corporate";
 
 }
 
+button:hover {
+	color: white;
+	background-color: hsl(31, 100%, 68%);
+	font-family: "corporate";
+
+}
+
+
 input {
 	font-size: 1em;
+	font-family: "corporate";
 }
 
 .name {
 	display: flex;
 	justify-content: center;
 	font-family: "corporate";
+	flex-direction: column;
 }
