--- a/css.css
+++ b/css.css
@@ -378,16 +378,13 @@ button {
 	margin-top: 1em;
 	padding: 2em;
 	font-family: "corporate";
+	border-radius: 25px;
 
 
-}
-
-button:hover {
-	color: white;
-	background-color: hsl(31, 100%, 41%);
-	font-family: "corporate";
 
 }
+
+
 
 button:hover {
 	color: white;
@@ -400,6 +397,10 @@ button:hover {
 input {
 	font-size: 1em;
 	font-family: "corporate";
+	border-radius: 25px;
+	height: 3em;
+	width: 100%;
+	background-color: hsl(31, 100%, 90%);
 }
 
 .name {
@@ -407,4 +408,34 @@ input {
 	justify-content: center;
 	font-family: "corporate";
 	flex-direction: column;
+}
+@media (min-width:900px) {
+	.name {
+		display: flex;
+		justify-content: center;
+		font-family: "corporate";
+		flex-direction: row;	}
+
+		button {
+			background-color: white;
+			color: hsl(31, 100%, 41%);
+			border-color: hsl(31, 100%, 41%);
+			margin-left: 1em;
+			width: 30%;
+			font-family: "kimberleyblack";
+			border-radius: 25px;
+			margin-top: 0px;
+		
+		
+		}
+
+		input {
+			font-size: 1em;
+			font-family: "corporate";
+			border-radius: 25px;
+			height: 3em;
+			width: 100%;
+			background-color: hsl(31, 100%, 90%);
+		}
+		
 }
